<package>
  <name>rtt</name>
  <version>2.6.0</version>
    <description >
      Orocos/RTT component framework
    </description>
    <license>GPL v2 with linking exception</license>
    <maintainer email="orocos-dev@lists.mech.kuleuven.be">RTT Developers</maintainer>
    <author>RTT Developers</author>
    <url>http://www.orocos.org/rtt</url>
    
    <buildtool_depend>cmake</buildtool_depend>

    <build_depend>boost</build_depend>
    <build_depend>omniorb</build_depend>
    <build_depend>rospack</build_depend>

    <run_depend>boost</run_depend>
    <run_depend>omniorb</run_depend>
    <run_depend>rospack</run_depend>
    
    <export>
      <build_type>cmake</build_type>
    </export>

</package>

