<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtt</name>
  <version>2.9.0</version>
  <description>
    Orocos/RTT component framework
  </description>
  <license>GPL v2 with linking exception</license>
  <maintainer email="orocos-dev@orocos.org">Orocos Developers</maintainer>
  <url>http://www.orocos.org/rtt</url>

  <author>RTT Developers</author>

  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend> <!-- optional -->
  <buildtool_export_depend>pkg-config</buildtool_export_depend> <!-- for UseOROCOS-RTT-helpers.cmake -->
  <buildtool_export_depend>xpath-perl</buildtool_export_depend> <!-- optional: to parse manifest.xml in UseOROCOS-RTT-helpers.cmake -->

  <depend>boost</depend>
  <depend>omniorb</depend> <!-- optional -->

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
